[metadata]
name = tenant_expt
summary = SDNLab Demo Experiment Plugin
description-file =
    README.md
license =
author = SDNLab
author-email =
home-page =
classifier =
    Environment :: SDNLab
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    tenant_expt
data_files =
    etc/tenant_expt = etc/tenant_expt/*

[entry_points]
terra.business.plugin =
    tenant_expt = tenant_expt.service.manager:TenantExptPlugin
terra.tenant_expt = 
    sql = tenant_expt.service.backends.sql.core:Experiment

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
domain = tenant_expt
directory = tenant_expt/locale

[update_catalog]
domain = tenant_expt
output_dir = tenant_expt/locale
input_file = tenant_expt/locale/tenant_expt.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tenant_expt/locale/tenant_expt.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
