[metadata]
name = container_expt
summary = SDNLab Demo Experiment Plugin
description-file =
    README.md
license =
author = SDNLab
author-email =
home-page =
classifier =
    Environment :: SDNLab
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    container_expt
data_files =
    etc/container_expt = etc/container_expt/*

[entry_points]
terra.business.plugin =
    container_expt = container_expt.service.manager:containerExptPlugin
terra.container_expt = 
    sql = container_expt.service.backends.sql.core:Experiment

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
domain = container_expt
directory = container_expt/locale

[update_catalog]
domain = container_expt
output_dir = container_expt/locale
input_file = container_expt/locale/container_expt.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = container_expt/locale/container_expt.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
